FestinaLenteApp/src/objects/BookedDate__c.object
<CustomObject>
    <fields>
        <fullName>AvailableDateIdBookingId__c</fullName>
        <description>To simplify uniqueness check</description>
        <formula>AvailableDate__r.Id + Booking__r.Id</formula>
        <label>Available Date Id Booking Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvailableDateSpacesBooked__c</fullName>
        <formula>AvailableDate__r.SpacesBooked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Date Spaces Booked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AvailableDateSpacesRemaining__c</fullName>
        <formula>AvailableDate__r.SpacesRemaining__c</formula>
        <label>Available Date Spaces Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AvailableDate__c</fullName>
        <label>Available Date</label>
        <referenceTo>AvailableDate__c</referenceTo>
        <relationshipLabel>Booked Dates</relationshipLabel>
        <relationshipName>BookedDates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Booked Dates</relationshipLabel>
        <relationshipName>BookedDates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <formula>HYPERLINK( Booking__r.Client__r.Id ,  Booking__r.Client__r.FirstName + &apos; &apos; +  Booking__r.Client__r.LastName , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>AvailableDate__r.Date__c</formula>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DayOfWeek__c</fullName>
        <formula>AvailableDate__r.DayOfWeek__c</formula>
        <label>Day of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeekNumber__c</fullName>
        <formula>AvailableDate__r.WeekNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Booked Date</label>
    <nameField>
        <displayFormat>BD-{000000}</displayFormat>
        <label>Booked Date Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booked Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>